// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Menu /> create basic menu component 1`] = `
<nav
  className="fd-menu"
>
  <ul
    className="fd-menu__list"
  >
    <li>
      <a
        className="fd-link fd-menu__item"
        href="/"
      >
        Option 1
      </a>
    </li>
    <li>
      <a
        className="fd-link fd-menu__item"
        href="/"
      >
        Option 2
      </a>
    </li>
    <li>
      <a
        className="fd-link fd-menu__item"
        href="/"
      >
        Option 3
      </a>
    </li>
    <li>
      <a
        className="fd-link fd-menu__item"
        href="/"
      >
        Option 4
      </a>
    </li>
    <li>
      <a
        className="fd-menu__item"
      >
        Option 5
      </a>
    </li>
  </ul>
</nav>
`;

exports[`<Menu /> create menu add-on component 1`] = `
<nav
  className="fd-menu fd-menu--addon-before"
>
  <ul
    className="fd-menu__list"
  >
    <li>
      <a
        className="fd-menu__item"
        href="/"
        onClick={[Function]}
      >
        Option 1
      </a>
    </li>
    <li>
      <div
        className="fd-menu__addon-before"
      >
        <span
          className="sap-icon--accept"
        />
      </div>
      <a
        className="fd-menu__item"
        href="/"
        onClick={[Function]}
      >
        Option 2
      </a>
    </li>
    <li>
      <a
        className="fd-menu__item"
        href="/"
        onClick={[Function]}
      >
        Option 3
      </a>
    </li>
    <li>
      <a
        className="fd-menu__item"
        href="/"
        onClick={[Function]}
      >
        Option 4
      </a>
    </li>
  </ul>
</nav>
`;

exports[`<Menu /> create menu group component 1`] = `
<nav
  className="fd-menu blue"
>
  <ul
    className="fd-menu__list blue"
  >
    <li>
      <a
        className="fd-menu__item"
        href="/"
        onClick={[Function]}
      >
        Option 1
      </a>
    </li>
    <li
      className="blue"
    >
      <a
        className="fd-menu__item"
        href="/"
        onClick={[Function]}
      >
        Option 2
      </a>
    </li>
    <li>
      <a
        className="fd-menu__item"
        href="/"
        onClick={[Function]}
      >
        Option 3
      </a>
    </li>
  </ul>
  <div
    className="fd-menu__group blue"
  >
    <h3
      className="fd-menu__title"
    >
      Group Header
    </h3>
    <ul
      className="fd-menu__list"
    >
      <li>
        <a
          className="fd-menu__item"
          href="/"
          onClick={[Function]}
        >
          Option 4
        </a>
      </li>
      <li>
        <a
          className="fd-menu__item"
          href="/"
          onClick={[Function]}
        >
          Option 5
        </a>
      </li>
      <li>
        <a
          className="fd-menu__item"
          href="/"
          onClick={[Function]}
        >
          Option 6
        </a>
      </li>
    </ul>
  </div>
  <div
    className="fd-menu__group"
  >
    <h3
      className="fd-menu__title"
    >
      Group Header 2
    </h3>
    <ul
      className="fd-menu__list"
    >
      <li>
        <a
          className="fd-menu__item"
          href="/"
          onClick={[Function]}
        >
          Option 7
        </a>
      </li>
      <li>
        <a
          className="fd-menu__item"
          href="/"
          onClick={[Function]}
        >
          Option 8
        </a>
      </li>
      <li>
        <a
          className="fd-menu__item"
          href="/"
          onClick={[Function]}
        >
          Option 9
        </a>
      </li>
    </ul>
  </div>
</nav>
`;

exports[`<Menu /> create menu with separator component 1`] = `
<nav
  className="fd-menu"
>
  <ul
    className="fd-menu__list"
  >
    <li>
      <a
        className="fd-menu__item"
        href="/"
        onClick={[Function]}
      >
        Option 1
      </a>
    </li>
    <hr />
    <li>
      <a
        className="fd-menu__item"
        href="/"
        onClick={[Function]}
      >
        Option 2
      </a>
    </li>
    <hr />
    <li>
      <a
        className="fd-menu__item"
        href="/"
        onClick={[Function]}
      >
        Option 3
      </a>
    </li>
    <hr />
    <li>
      <a
        className="fd-menu__item"
        href="/"
        onClick={[Function]}
      >
        Option 4
      </a>
    </li>
  </ul>
</nav>
`;
